--- a/.github/workflows/139-370-ubuntu-banish-name-collision.yml
+++ b/.github/workflows/139-370-ubuntu-banish-name-collision.yml
@@ -1,16 +1,16 @@
-name: 139-369 Ubuntu banish gloss blacklist
+name: 139-370 Ubuntu banish name collision
 
 on:
   pull_request:
     types: [opened, synchronize, reopened]
 
 concurrency:
-  group: 139-369-${{ github.event.pull_request.number }}
+  group: 139-370-${{ github.event.pull_request.number }}
   cancel-in-progress: true
 
 jobs:
-  job-139-369-1-banished-gloss-absent:
-    name: "139-369 #1 banish gloss absent"
+  job-139-370-5-banish-direct-wrapper:
+    name: "139-370 #5 banish direct wrapper"
     runs-on: ubuntu-latest
     timeout-minutes: 60
     steps:
@@ -22,113 +22,112 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y attr
 
-      - name: #1 Verify gloss absent and run banish
+      - name: #5 Run banish() wrapper (direct spell)
         shell: bash
         run: |
           set -euo pipefail
-          echo "[#1] verify banish gloss is absent"
+          echo "[#5] banish() wrapper calling spell directly"
           export WIZARDRY_DIR="$GITHUB_WORKSPACE"
-          . "$WIZARDRY_DIR/spells/.imps/sys/invoke-wizardry"
-          gloss_file=$(mktemp /tmp/wizardry-gloss.XXXXXX)
-          "$WIZARDRY_DIR/spells/.wizardry/generate-glosses" --output "$gloss_file"
-          if grep -q '^banish()' "$gloss_file"; then
-            printf '%s\n' "banish gloss still present" >&2
-            exit 1
-          fi
-          set +e
-          ( banish 8 --only --no-tests --no-heal )
-          status=$?
-          if [ "$status" -eq 139 ]; then
-            printf '%s\n' "subshell banish exited with code 139 (SIGSEGV)"
-            printf '%s\n' "Last 50 dmesg lines (if available):"
-            dmesg | tail -n 50 || true
-          fi
-          exit "$status"
-
-  job-139-369-2-command-banish:
-    name: "139-369 #2 command banish"
-    runs-on: ubuntu-latest
-    timeout-minutes: 60
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Install attr
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y attr
-
-      - name: #2 Run command banish
-        shell: bash
-        run: |
-          set -euo pipefail
-          echo "[#2] command banish"
-          export WIZARDRY_DIR="$GITHUB_WORKSPACE"
-          . "$WIZARDRY_DIR/spells/.imps/sys/invoke-wizardry"
-          set +e
-          ( command banish 8 --only --no-tests --no-heal )
-          status=$?
-          if [ "$status" -eq 139 ]; then
-            printf '%s\n' "subshell banish exited with code 139 (SIGSEGV)"
-            printf '%s\n' "Last 50 dmesg lines (if available):"
-            dmesg | tail -n 50 || true
-          fi
-          exit "$status"
-
-  job-139-369-3-inline-banish-parse:
-    name: "139-369 #3 inline banish parse"
-    runs-on: ubuntu-latest
-    timeout-minutes: 60
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Install attr
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y attr
-
-      - name: #3 Inline banish wrapper using parse
-        shell: bash
-        run: |
-          set -euo pipefail
-          echo "[#3] inline banish wrapper with parse"
-          export WIZARDRY_DIR="$GITHUB_WORKSPACE"
-          . "$WIZARDRY_DIR/spells/.imps/sys/invoke-wizardry"
-          banish() { parse banish "$@"; }
-          set +e
-          ( banish 8 --only --no-tests --no-heal )
-          status=$?
-          if [ "$status" -eq 139 ]; then
-            printf '%s\n' "subshell banish exited with code 139 (SIGSEGV)"
-            printf '%s\n' "Last 50 dmesg lines (if available):"
-            dmesg | tail -n 50 || true
-          fi
-          exit "$status"
-
-  job-139-369-4-inline-banish-direct:
-    name: "139-369 #4 inline banish direct"
-    runs-on: ubuntu-latest
-    timeout-minutes: 60
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Install attr
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y attr
-
-      - name: #4 Inline banish wrapper calling spell
-        shell: bash
-        run: |
-          set -euo pipefail
-          echo "[#4] inline banish wrapper with direct spell"
-          export WIZARDRY_DIR="$GITHUB_WORKSPACE"
+          export WIZARDRY_GLOSSES=0
           . "$WIZARDRY_DIR/spells/.imps/sys/invoke-wizardry"
           banish() { "$WIZARDRY_DIR/spells/wards/banish" "$@"; }
           set +e
           ( banish 8 --only --no-tests --no-heal )
+          status=$?
+          if [ "$status" -eq 139 ]; then
+            printf '%s\n' "subshell banish exited with code 139 (SIGSEGV)"
+            printf '%s\n' "Last 50 dmesg lines (if available):"
+            dmesg | tail -n 50 || true
+          fi
+          exit "$status"
+
+  job-139-370-6-banish-command-wrapper:
+    name: "139-370 #6 banish command wrapper"
+    runs-on: ubuntu-latest
+    timeout-minutes: 60
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install attr
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y attr
+
+      - name: #6 Run banish() wrapper (command banish)
+        shell: bash
+        run: |
+          set -euo pipefail
+          echo "[#6] banish() wrapper calling command banish"
+          export WIZARDRY_DIR="$GITHUB_WORKSPACE"
+          export WIZARDRY_GLOSSES=0
+          . "$WIZARDRY_DIR/spells/.imps/sys/invoke-wizardry"
+          banish() { command banish "$@"; }
+          set +e
+          ( banish 8 --only --no-tests --no-heal )
+          status=$?
+          if [ "$status" -eq 139 ]; then
+            printf '%s\n' "subshell banish exited with code 139 (SIGSEGV)"
+            printf '%s\n' "Last 50 dmesg lines (if available):"
+            dmesg | tail -n 50 || true
+          fi
+          exit "$status"
+
+  job-139-370-7-renamed-wrapper:
+    name: "139-370 #7 renamed wrapper"
+    runs-on: ubuntu-latest
+    timeout-minutes: 60
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install attr
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y attr
+
+      - name: #7 Run renamed wrapper (banish_gloss)
+        shell: bash
+        run: |
+          set -euo pipefail
+          echo "[#7] banish_gloss wrapper calling spell directly"
+          export WIZARDRY_DIR="$GITHUB_WORKSPACE"
+          export WIZARDRY_GLOSSES=0
+          . "$WIZARDRY_DIR/spells/.imps/sys/invoke-wizardry"
+          banish_gloss() { "$WIZARDRY_DIR/spells/wards/banish" "$@"; }
+          set +e
+          ( banish_gloss 8 --only --no-tests --no-heal )
+          status=$?
+          if [ "$status" -eq 139 ]; then
+            printf '%s\n' "subshell banish exited with code 139 (SIGSEGV)"
+            printf '%s\n' "Last 50 dmesg lines (if available):"
+            dmesg | tail -n 50 || true
+          fi
+          exit "$status"
+
+  job-139-370-8-no-wrapper-command:
+    name: "139-370 #8 no wrapper command banish"
+    runs-on: ubuntu-latest
+    timeout-minutes: 60
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install attr
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y attr
+
+      - name: #8 Run command banish (no wrapper)
+        shell: bash
+        run: |
+          set -euo pipefail
+          echo "[#8] command banish with no wrapper"
+          export WIZARDRY_DIR="$GITHUB_WORKSPACE"
+          export WIZARDRY_GLOSSES=0
+          . "$WIZARDRY_DIR/spells/.imps/sys/invoke-wizardry"
+          set +e
+          ( command banish 8 --only --no-tests --no-heal )
           status=$?
           if [ "$status" -eq 139 ]; then
             printf '%s\n' "subshell banish exited with code 139 (SIGSEGV)"
