--- a/.github/workflows/collect-failures.yml
+++ b/.github/workflows/collect-failures.yml
@@ -69,7 +69,7 @@ jobs:
 
           # Workflows to monitor
           workflows=(
-            "139-370 Ubuntu banish name collision"
+            "139-371 Ubuntu gloss blacklist verify"
           )
           
           # Total number of workflows we're monitoring
